--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
     "scheme": "mobile",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "entryPoint" : "./src/app/index.tsx",
     "ios": {
       "supportsTablet": true
     },
