added exercise screen and modal

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,6 +39,7 @@ target 'AITrainer' do
     :hermes_enabled => podfile_properties['expo.jsEngine'] == nil || podfile_properties['expo.jsEngine'] == 'hermes',
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/..",
+    :new_arch_enabled => true
     :privacy_file_aggregation_enabled => podfile_properties['apple.privacyManifestAggregationEnabled'] != 'false',
   )
 
